[project]
name = "urban-enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langserve>=0.3.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain-ollama>=0.3.3",
    "fastapi>=0.115.13",
]
